--- a/aoc2022d1/Cargo.toml
+++ b/aoc2022d1/Cargo.toml
@@ -3,7 +3,6 @@ name = "aoc2022d1"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+clap = {version = "4.2.1", features = ["derive"] }
 nom = "7.1.3"
